--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "colorful-timetable-builder",
+  "homepage": "https://DaEtoJostka.github.io/unitime/",
   "version": "1.0.0",
   "description": "A colorful and interactive timetable builder for university schedules",
-  "main": "src/index.tsx",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -25,8 +25,8 @@
     "@types/react-dom": "^18.2.19",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.2.1",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.3.3",
-    "vite": "^5.1.1",
-    "gh-pages": "^6.1.1"
+    "vite": "^5.1.1"
   }
 }
