--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix"
   },
   "dependencies": {
+    "@google/genai": "^1.24.0",
     "@types/uuid": "^10.0.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
